tests/errors/unknown_field.erbos
Point is { x int
  y int }
spark {
  p is Point()
  yell(p.z)
}
